--- a/CreatQRLink01.html
+++ b/CreatQRLink01.html
@@ -185,10 +185,11 @@
       <a href='CreatQRLink01.html' class='lastMenu type_uppercase'>Create QR Link</a>
       <a class='lastMenu type_uppercase no_acc'>My Networks</a>
       <a class='lastMenu type_uppercase no_acc'>Create Network</a>
+      <a class='lastMenu type_uppercase no_acc'>saved contacts</a>
       <a class='lastMenu type_uppercase no_acc'>My QR Links</a>
       <a class='lastMenu type_uppercase no_acc'>My Account</a>
 
-      <div class='all_box m_magTD30 m_padSID20'>
+      <div class='all_box m_magTD20 m_padSID20'>
         <a href="login.html" class='link_brightBlue no_mark type_uppercase '>log in</a>
       </div>
 
