--- a/CreateNetwork01.html
+++ b/CreateNetwork01.html
@@ -44,48 +44,53 @@
           </div>
 
           <div class='cent_boxs'>
-            <div class='cent_box'>
-              <div class='all_box'>
-                <div class='team_pic_box'><img src="img/team.png"></div>
-                <div class='team_type_box'>
-                  <div class='all_box'>
-                    <a href="NetWorkList_my01.html" class='team_title'>Intern Team</a>
-                    <a href="NetWorkList_my03.html" class='link_icon icon-createmode_editedit'></a>
-                  </div>
-                  <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
-                </div>
-              </div>
+            <div class='cent_box cent_box35'>
+              <input class='toEnter addEnter borderGray magD15' value="Team Name" onfocus="this.value=''" onblur="this.value='ex: Team Name'" >
+              <input class='toEnter addEnter borderGray' value="brief introduction" onfocus="this.value=''" onblur="this.value='brief introduction'" >
+            </div>
 
-              <div class='all_box padTB15 borderGray_T'>
-                <p class='type_data_title'>Network Code</p>
+            <i class='m_border'></i><!-- 手機版・虛線 -->
 
-                <div class='input_box input_box_top15'>
-                  <p class='link_code'>H2cR531</p>
-                  <button class='btn_status_box c_blue c_blue_po member icon-content_copy'></button>
-                </div>
-              </div>
-
-              <div class='all_box padTB15 borderGray_D'>
-                <p class='type_data_title'>Network Link</p>
-                <div class='input_box input_box_top15 borderGray'>
-                  <div class='toEnter networklink'><a href="#" class='addEnter' >http://selectnshare/haleyhob</a></div>
-                  <button class='btn_status_box c_blue member icon-content_copy'></button>
-                </div>
-
-                <div class='all_box padT15 w_cent'>
-                  <div class='link_title link100'>APR 21, 2020 @ 4:32 PM</div>
-                  <img src="img/qr.png">
-                </div>
+            <div class='cent_box cent_box65 borderGray_left'>
+              <div class='input_box borderGray'>
+                <input class='toEnter addEnter on_net01' disabled="disabled" type="text" value="Lucy Redder">
               </div>
 
               <div class='all_box'>
-                <p class='type_data_title'>Admin</p>
-
-                <div class='input_box input_box_top15 borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                <!-- 01.email-->
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-email'></div>
+                  <input class='inEnter addEnter' disabled="disabled" type="text" value="abcdef568328@gmail.com" >
                 </div>
+
+                <!-- 02.Instagram -->
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-instagram'></div>
+                  <input class='inEnter addEnter' disabled="disabled" type="text" value="LucyRedde">
+                </div>
+
+                <!-- 03.Snapchat -->
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-snapchat'></div>
+                  <input class='inEnter addEnter' disabled="disabled" type="text" value="lucyredde23" >
+                </div>
+
+                <!-- 04.Facebook -->
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-facebook'></div>
+                  <input class='inEnter addEnter' disabled="disabled" type="text" value="lr123" >
+                </div>
+
+                <!-- 05.Phone -->
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-phone'></div>
+                  <input class='inEnter addEnter' disabled="disabled" type="text" value="0912345678">
+                </div>
+
+
+              <div class='all_box btn_cent m_cent'>
+                <a class='btn_add no_event_btn icon-plus'></a>
+                <a href="CreateNetwork02.html" class='link_gray order_right m_order_no m_magTop45 type_uppercase'>create Network</a>
               </div>
             </div>
           </div>
@@ -121,7 +126,6 @@
         <a href="index.html" class='link_brightBlue no_mark type_uppercase '>log out</a>
       </div>
     </div>
-
   </body>
 </html>
 
