--- a/MyQRLink02.html
+++ b/MyQRLink02.html
@@ -37,56 +37,61 @@
 
         <main>
           <div class='cent_boxs cent_web'>
-            <div class='cent_box'>
+            <div class='cent_box cent_box50'>
               <a href="account.html" class='m_title_type type_uppercase'>Lucy Redder</a>
               <a href="on_CreatQRLink01.html" class='m_top_type order_right w_not_show'>Create QR Link</a>
+            </div>
+
+            <i class='m_border_all2'></i><!-- 手機版・虛線 -->
+
+            <div class='cent_box cent_box50'>
+              <a href="MyQRLink01.html" class='m_top_type order_right m_order_no'>QR Links You Created</a>
             </div>
           </div>
 
           <div class='cent_boxs'>
             <div class='cent_box'>
-              <div class='all_box'>
-                <div class='team_pic_box'><img src="img/team.png"></div>
-                <div class='team_type_box'>
-                  <div class='all_box'>
-                    <a href="NetWorkList_my01.html" class='team_title'>Intern Team</a>
-                    <a href="NetWorkList_my03.html" class='link_icon icon-createmode_editedit'></a>
-                  </div>
-                  <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
-                </div>
-              </div>
-
-              <div class='all_box padTB15 borderGray_T'>
-                <p class='type_data_title'>Network Code</p>
-
-                <div class='input_box input_box_top15'>
-                  <p class='link_code'>H2cR531</p>
-                  <button class='btn_status_box c_blue c_blue_po member icon-content_copy'></button>
-                </div>
-              </div>
-
-              <div class='all_box padTB15 borderGray_D'>
-                <p class='type_data_title'>Network Link</p>
-                <div class='input_box input_box_top15 borderGray'>
-                  <div class='toEnter networklink'><a href="#" class='addEnter' >http://selectnshare/haleyhob</a></div>
-                  <button class='btn_status_box c_blue member icon-content_copy'></button>
-                </div>
-
-                <div class='all_box padT15 w_cent'>
-                  <div class='link_title link100'>APR 21, 2020 @ 4:32 PM</div>
-                  <img src="img/qr.png">
-                </div>
+              <div class='all_box magD30'>
+                <p class='type_data_title type_data_thin'>QR Links You Created</p>
+                <a href='MyQRLink01.html' class='btn_done btn_done_qr'>Done</a>
               </div>
 
               <div class='all_box'>
-                <p class='type_data_title'>Admin</p>
-
-                <div class='input_box input_box_top15 borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                <!-- 01.-->
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-qrcode---FontAwesome'></div>
+                  <p class='inEnter'>APR 21, 2020 @ 4:32 PM</p>
+                  <a href='MyQRLink03.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
                 </div>
-              </div>
+
+                <!-- 02.-->
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-qrcode---FontAwesome'></div>
+                  <p class='inEnter'>APR 21, 2020 @ 4:32 PM</p>
+                  <a href='MyQRLink03.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
+                </div>
+
+                <!-- 03.-->
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-qrcode---FontAwesome'></div>
+                  <p class='inEnter'>APR 21, 2020 @ 4:32 PM</p>
+                  <a href='MyQRLink03.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
+                </div>
+
+                <!-- 04.-->
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-qrcode---FontAwesome'></div>
+                  <p class='inEnter'>APR 21, 2020 @ 4:32 PM</p>
+                  <a href='MyQRLink03.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
+                </div>
+
+                <!-- 05.-->
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-qrcode---FontAwesome'></div>
+                  <p class='inEnter'>APR 21, 2020 @ 4:32 PM</p>
+                  <a href='MyQRLink03.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
+                </div>
+              </div>  
             </div>
           </div>
         </main>
