--- a/NetWorkList01.html
+++ b/NetWorkList01.html
@@ -26,7 +26,7 @@
         <header>
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
           <nav>
-            <a href="on_NetWorkPage01.html" class='web_menu web_a'>JOIN an NETWORK</a>
+            <a href="on_NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
             <a href="on_CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
             <a class='web_menu'>MENU</a>
             <a href="index.html" class='link_login order_right'>LOG OUT</a>
@@ -44,103 +44,83 @@
           </div>
 
           <div class='cent_boxs'>
-            <div class='cent_box cent_box35'>
+            <div class='cent_box cent_box50 borderGray_right'>
+              <div class='all_box magD30'>
+                <p class='type_data_title'>Networks You Joined</p>
+              </div>
+
               <div class='all_box'>
-                <div class='team_pic_box'><img src="img/team.png"></div>
-                <div class='team_type_box'>
-                  <div class='all_box'>
-                    <a href="on_NetWorkPage04.html" class='team_title'>Intern Team</a>
-                    <a href="on_NetWorkPage04_3.html" class='link_icon icon-qrcode---FontAwesome'></a>
-                  </div>
-                  <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
+                <!-- 01.-->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-bubble_chart---material'></div>
+                  <p class='inEnter'>Team Name01</p>
+                  <a href='NetWorkList_ot01.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
                 </div>
-              </div>
 
-              <div class='all_box padTB15 borderGray_TD'>
-                <p class='type_data_title'>My Shared Info</p>
-                <a href='on_NetWorkPage05.html' class='link_icon icon-remove_red_eyevisibility'></a>
-              </div>
-
-              <!-- 網頁版・admin資訊露出・開始 (對應123行，同一個東西) -->
-              <div class='all_box m_not_show'>
-                <p class='type_data_title'>Admin</p>
-
-                <div class='input_box input_box_top15 borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                <!-- 02.-->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-bubble_chart---material'></div>
+                  <p class='inEnter'>Team Name02</p>
+                  <a href='NetWorkList_ot01.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
                 </div>
-              </div>
-              <!-- 網頁版・admin資訊露出・結束 -->
+
+                <!-- 03.-->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-bubble_chart---material'></div>
+                  <p class='inEnter'>Team Name03</p>
+                  <a href='NetWorkList_ot01.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
+                </div>
+
+                <!-- 04.-->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-bubble_chart---material'></div>
+                  <p class='inEnter'>Team Name04</p>
+                  <a href='NetWorkList_ot01.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
+                </div>
+
+                <!-- 05.-->
+                <div class='input_box borderBlue'>
+                  <div class='social_box icon-bubble_chart---material'></div>
+                  <p class='inEnter'>Team Name05</p>
+                  <a href='NetWorkList_ot01.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
+                </div>
+              </div>  
             </div>
 
+            <i class='m_border'></i><!-- 手機版・虛線 -->
 
-            <div class='cent_box cent_box65 borderGray_left'>
+            <div class='cent_box cent_box50 Networks You Created'>
+              <div class='all_box magD30'>
+                <p class='type_data_title'>Networks You Joined</p>
+              </div>
+
               <div class='all_box'>
-                <!-- search -->
-                <div class='input_box borderBrightblue'>
-                  <div class='social_box serch_box icon-search'></div>
-                  <input class='inEnter addEnter' type="text" value="Search" onfocus="this.value=''" onblur="this.value='Search'">
+                <!-- 01.-->
+                <div class='input_box borderBlue'>
+                  <div class='social_box team_box icon-bubble_chart---material'></div>
+                  <p class='inEnter'>Team Name01</p>
+                  <a href='NetWorkList_my01.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
                 </div>
 
-                <!-- member -->
-                <div class='input_box borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="member name01">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                <!-- 02.-->
+                <div class='input_box borderBlue'>
+                  <div class='social_box team_box icon-bubble_chart---material'></div>
+                  <p class='inEnter'>Team Name02</p>
+                  <a href='NetWorkList_my01.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
                 </div>
 
-                <div class='input_box borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="member name02">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                <!-- 03.-->
+                <div class='input_box borderBlue'>
+                  <div class='social_box team_box icon-bubble_chart---material'></div>
+                  <p class='inEnter'>Team Name03</p>
+                  <a href='NetWorkList_my01.html' class='btn_status_box c_blue2 icon-chevron-right'></a>
                 </div>
+              </div>  
+            </div>
 
-                <div class='input_box borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="member name03">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
-                </div>
-
-                <div class='input_box borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="member name04">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
-                </div>
-
-                <div class='input_box borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="member name05">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
-                </div>
-
-                <div class='input_box borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="member name06">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
-                </div>
-
-                <div class='input_box borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="member name07">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
-                </div>
-              </div>
-
-              <i class='m_border_all'></i><!-- 手機版・虛線 -->
-
-              <!-- 手機版・admin資訊露出・開始 -->
-              <div class='all_box padTB15 w_not_show'>
-                <p class='type_data_title'>Admin</p>
-
-                <div class='input_box input_box_top15 borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
-                </div>
-              </div>
-              <!-- 手機版admin資訊露出・結束 -->
-
+            <div class='all_box padSID35 btn_cent m_cent magTop45'>
+              <a href="on_NetWorkPage01.html" class='line_brightBlue order_left m_order_no m_magTop45'>JOIN NEW NETWORK</a>
+              <a href="CreateNetwork01.html" class='link_brightBlue order_right m_order_no m_magTop15'>CREATE an NETWORK</a>
             </div>
           </div>
         </main>
@@ -167,6 +147,7 @@
       <a href='on_CreatQRLink01.html' class='lastMenu type_uppercase'>Create QR Link</a>
       <a href='NetWorkList01.html' class='lastMenu type_uppercase'>My Networks</a>
       <a href='CreateNetwork01.html' class='lastMenu type_uppercase'>Create Network</a>
+      <a href='SavePage01.html' class='lastMenu type_uppercase'>saved contacts</a>
       <a href='MyQRLink01.html' class='lastMenu type_uppercase'>My QR Links</a>
       <a href='account.html' class='lastMenu type_uppercase'>My Account</a>
 
