--- a/SavePage02.html
+++ b/SavePage02.html
@@ -37,79 +37,100 @@
 
         <main>
           <div class='cent_boxs cent_web'>
-            <div class='cent_box'>
+            <div class='cent_box cent_box50'>
               <a href="account.html" class='m_title_type type_uppercase'>Lucy Redder</a>
               <a href="on_CreatQRLink01.html" class='m_top_type order_right w_not_show'>Create QR Link</a>
             </div>
-          </div>
 
+            <i class='m_border_all2'></i><!-- 手機版・虛線 -->
+
+            <div class='cent_box cent_box50'>
+              <a href="MyQRLink01.html" class='m_top_type order_right m_order_no'>QR Links You Created</a>
+            </div>
+          </div>
+          
           <div class='cent_boxs'>
-            <div class='cent_box cent_box35'>
-              <div class='all_box'>
-                <div class='team_pic_box'><img src="img/team.png"></div>
-                <div class='team_type_box'>
-                  <div class='all_box'>
-                    <a class='team_title no_event'>Intern Team</a>
-                    <a class='link_icon no_event_icon icon-qrcode---FontAwesome'></a>
-                  </div>
-                  <p class='team_type no_event'>Welcome to the new team! Let's get to know each other!</p>
+            <!-- search -->
+            <div class='cent_serch_box'>
+              <div class='all_box magD30 w_not_show'>
+                <p class='type_data_title order_left'>Saved Contacts Pages</p>
+              </div>
+
+              <div class='all_box box50'>
+                <div class='input_box input_search90 borderBrightblue'>
+                  <div class='social_box serch_box icon-search'></div>
+                  <input class='inEnter addEnter' type="text" value="Search" onfocus="this.value=''" onblur="this.value='Search'">
                 </div>
-              </div>              
+                <a href='SavePage01.html' class='btn_done'>Done</a>
+              </div>
             </div>
 
+            <div class='cent_box cent_box50 borderGray_right'>
+              <div class='all_box magD30'>
+                <p class='type_data_title type_data_thin'>Scanned from QR Links</p>
+              </div>
+
+              <div class='all_box'>
+                <!-- member -->
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
+                  <input class='inEnter' type="text" value="member name01">
+                  <a class='btn_status_box c_gray member icon-cancel'></a>
+                </div>
+
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
+                  <input class='inEnter' type="text" value="member name01">
+                  <a class='btn_status_box c_gray member icon-cancel'></a>
+                </div>
+
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
+                  <input class='inEnter' type="text" value="member name01">
+                  <a class='btn_status_box c_gray member icon-cancel'></a>
+                </div>
+
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
+                  <input class='inEnter' type="text" value="member name01">
+                  <a class='btn_status_box c_gray member icon-cancel'></a>
+                </div>
+
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
+                  <input class='inEnter' type="text" value="member name01">
+                  <a class='btn_status_box c_gray member icon-cancel'></a>
+                </div>
+              </div>  
+            </div>
 
             <i class='m_border'></i><!-- 手機版・虛線 -->
 
-            <div class='cent_box cent_box65 borderGray_left'>
-              <div class='input_box'>
-                <a href='NetWorkList_ot03.html' class='btn_done'>Done</a>
-                <!-- <button class='btn_done'>Done</button> -->
-              </div>
-
-              <div class='input_box'>
-                <input class='toEnter borderBlue' type="text" value="Lucy Redder">
+            <div class='cent_box cent_box50 Networks You Created'>
+              <div class='all_box magD30'>
+                <p class='type_data_title type_data_thin'>Saved from Networks</p>
               </div>
 
               <div class='all_box'>
-                <!-- 01.email-->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-email'></div>
-                  <div class='inEnter' type="text">abcdef568328@gmail.com</div>
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                <!-- member -->
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
+                  <input class='inEnter' type="text" value="member name01">
+                  <a class='btn_status_box c_gray member icon-cancel'></a>
                 </div>
 
-                <!-- 02.Instagram -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-instagram'></div>
-                  <input class='inEnter' type="text" value="LucyRedde">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
+                  <input class='inEnter' type="text" value="member name01">
+                  <a class='btn_status_box c_gray member icon-cancel'></a>
                 </div>
 
-                <!-- 03.Snapchat -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-snapchat'></div>
-                  <input class='inEnter' type="text" value="lucyredde23">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                <div class='input_box borderGray'>
+                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
+                  <input class='inEnter' type="text" value="member name01">
+                  <a class='btn_status_box c_gray member icon-cancel'></a>
                 </div>
-
-                <!-- 04.Facebook -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-facebook'></div>
-                  <input class='inEnter' type="text" value="lr123">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
-                </div>
-
-                <!-- 05.Phone -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-phone'></div>
-                  <input class='inEnter' type="text" value="0912345678">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
-                </div>
-
-                <div class='all_box btn_cent m_cent'>
-                  <button class='btn_add icon-plus' onclick="openModal();currentSlide(1)"></button>
-                </div>
-              </div>
+              </div>  
             </div>
           </div>
         </main>
