--- a/CreateNetwork02.html
+++ b/CreateNetwork02.html
@@ -26,31 +26,39 @@
         <header>
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
           <nav>
-            <a href="NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
-            <a href="CreatQRLink01.html" class='web_menu web_a'>CREATE QR LINK</a>
-            <a class='web_menu menu_gray'>MENU</a>
-            <a href="login.html" class='link_login order_right'>LOG IN</a>
+            <a href="on_NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
+            <a href="on_CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
+            <a class='web_menu'>MENU</a>
+            <a href="index.html" class='link_login order_right'>LOG OUT</a>
           </nav>
 
           <div class='m_Hamburg icon-menu'></div>
         </header>
 
         <main>
-          <!-- 手機才會顯示 -->
-          <div class='cent_boxs cent_mobile'>
+          <div class='cent_boxs cent_web'>
             <div class='cent_box'>
-              <a href="login.html" class='m_title_type type_uppercase'>log in</a>
-              <a href="CreatQRLink01.html" class='m_top_type order_right'>Create QR Link</a>
+              <a href="account.html" class='m_title_type type_uppercase'>Lucy Redder</a>
+              <a href="on_CreatQRLink01.html" class='m_top_type order_right w_not_show'>Create QR Link</a>
             </div>
           </div>
-          <!-- 手機才會顯示・end -->
 
-         <div class='cent_boxs'>
-            <div class='cent_box'>
-              
+          <div class='cent_boxs'>
+            <div class='cent_box cent_box35'>
+              <div class='input_box'>
+                <input class='toEnter borderGray' type="text" value="Intern Team">
+              </div>
+              <div class='input_box'>
+                <textarea class='toEnter no_hid borderGray'>Welcome to the new team! Let's get to know each other!</textarea>
+              </div>              
+            </div>
+
+            <i class='m_border'></i><!-- 手機版・虛線 -->
+
+            <div class='cent_box cent_box65 borderGray_left'>
               <input class='toEnter borderBlue' type="text" value="Lucy Redder">
               
-              <p class='bright_type13 padTB15'>Enter the info you want to share:</p>
+              <p class='bright_type13 padTB15'>Select the info you want to share:</p>
 
               <div class='all_box'>
                 <!-- 01.email-->
@@ -108,12 +116,12 @@
                   <input class='inEnter' type="text" value="Lucy Redder">
                   <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
                 </div>
-              </div>
 
-              <div class='all_box btn_cent m_cent'>
-                <button class='btn_add icon-plus' onclick="openModal();currentSlide(1)"></button>
-                <a href="CreatQRLink03.html" class='link_brightBlue order_right m_order_no m_magTop45 type_uppercase'>create QR Link</a>
-              </div>
+                <div class='all_box btn_cent m_cent'>
+                  <button class='btn_add icon-plus' onclick="openModal();currentSlide(1)"></button>
+                  <a href="NetWorkList_my02.html" class='link_brightBlue order_right m_order_no m_magTop45 type_uppercase'>create Network</a>
+                </div>
+              </div>  
             </div>
           </div>
         </main>
@@ -129,34 +137,6 @@
       </div>
     </div>
 
-    <!-- 光箱・增加社群內容 -->
-    <div id="myModal" class="modal">
-      <div class='modal_boxs'>
-        <span class="lightbox_done" onclick="closeModal()">Done</span>
-        <!-- <span class="close icon-x" onclick="closeModal()"></span> -->
-
-        <div class='modal_box'>
-          <div class='check_social'><input class='icon-email' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-instagram' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-snapchat' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-facebook' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-phone' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-linkedin' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-twitter' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-youtube' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-tiktok' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-discord' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-slack' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-skype' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-reddit' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-groupme' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-whatsapp' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-line' type="checkbox" name=""></div>
-          <div class='check_social'><input class='icon-www' type="checkbox" name=""></div>
-        </div>
-      </div>
-    </div>
-
     <!-- 手機menu -->
     <div class='menu_boxs'>
       <div class='all_box m_magTD30 m_padSID20'>
@@ -164,33 +144,18 @@
         <a class='icon-x'></a>
       </div>
 
-      <a href='NetWorkPage01.html' class='lastMenu type_uppercase'>Join Network</a>
-      <a href='CreatQRLink01.html' class='lastMenu type_uppercase'>Create QR Link</a>
-      <a class='lastMenu type_uppercase no_acc'>My Networks</a>
-      <a class='lastMenu type_uppercase no_acc'>Create Network</a>
-      <a class='lastMenu type_uppercase no_acc'>saved contacts</a>
-      <a class='lastMenu type_uppercase no_acc'>My QR Links</a>
-      <a class='lastMenu type_uppercase no_acc'>My Account</a>
+      <a href='on_NetWorkPage01.html' class='lastMenu type_uppercase'>Join Network</a>
+      <a href='on_CreatQRLink01.html' class='lastMenu type_uppercase'>Create QR Link</a>
+      <a href='NetWorkList01.html' class='lastMenu type_uppercase'>My Networks</a>
+      <a href='CreateNetwork01.html' class='lastMenu type_uppercase'>Create Network</a>
+      <a href='SavePage01.html' class='lastMenu type_uppercase'>saved contacts</a>
+      <a href='MyQRLink01.html' class='lastMenu type_uppercase'>My QR Links</a>
+      <a href='account.html' class='lastMenu type_uppercase'>My Account</a>
 
-      <div class='all_box m_magTD20 m_padSID20'>
-        <a href="login.html" class='link_brightBlue no_mark type_uppercase '>log in</a>
-      </div>
-
-      <div class='all_box'>
-        <p class='team_type'>or <a href="signup.html" class='link_CreatAcc'>create an account</a></p>
+      <div class='all_box m_magTD30 m_padSID20'>
+        <a href="index.html" class='link_brightBlue no_mark type_uppercase '>log out</a>
       </div>
     </div>
-
-    <!-- lightbox -->
-    <script>
-      function openModal() {
-        document.getElementById("myModal").style.display = "block";
-      }
-
-      function closeModal() {
-        document.getElementById("myModal").style.display = "none";
-      }
-    </script>
   </body>
 </html>
 
