--- a/MyQRLink03.html
+++ b/MyQRLink03.html
@@ -37,56 +37,74 @@
 
         <main>
           <div class='cent_boxs cent_web'>
-            <div class='cent_box'>
+            <div class='cent_box cent_box50'>
               <a href="account.html" class='m_title_type type_uppercase'>Lucy Redder</a>
               <a href="on_CreatQRLink01.html" class='m_top_type order_right w_not_show'>Create QR Link</a>
+            </div>
+
+            <i class='m_border_all2'></i><!-- 手機版・虛線 -->
+
+            <div class='cent_box cent_box50'>
+              <a href="MyQRLink01.html" class='m_top_type order_right m_order_no'>QR Links You Created</a>
             </div>
           </div>
 
           <div class='cent_boxs'>
-            <div class='cent_box'>
-              <div class='all_box'>
-                <div class='team_pic_box'><img src="img/team.png"></div>
-                <div class='team_type_box'>
-                  <div class='all_box'>
-                    <a href="NetWorkList_my01.html" class='team_title'>Intern Team</a>
-                    <a href="NetWorkList_my03.html" class='link_icon icon-createmode_editedit'></a>
-                  </div>
-                  <p class='team_type'>Welcome to the new team! Let's get to know each other!</p>
-                </div>
-              </div>
-
-              <div class='all_box padTB15 borderGray_T'>
-                <p class='type_data_title'>Network Code</p>
-
-                <div class='input_box input_box_top15'>
-                  <p class='link_code'>H2cR531</p>
-                  <button class='btn_status_box c_blue c_blue_po member icon-content_copy'></button>
-                </div>
-              </div>
-
-              <div class='all_box padTB15 borderGray_D'>
-                <p class='type_data_title'>Network Link</p>
+            <div class='cent_box cent_box35 borderGray_right'>
+              <div class='all_box padTB15 m_no_space'>
+                <p class='note_type'>Share the link or use camera to scan QR code:</p>
                 <div class='input_box input_box_top15 borderGray'>
                   <div class='toEnter networklink'><a href="#" class='addEnter' >http://selectnshare/haleyhob</a></div>
                   <button class='btn_status_box c_blue member icon-content_copy'></button>
                 </div>
 
                 <div class='all_box padT15 w_cent'>
-                  <div class='link_title link100'>APR 21, 2020 @ 4:32 PM</div>
+                  <div class='link_title'>APR 21, 2020 @ 4:32 PM</div>
                   <img src="img/qr.png">
                 </div>
               </div>
+            </div>
+
+            <i class='m_border'></i><!-- 手機版・虛線 -->
+
+            <div class='cent_box cent_box65 borderGray_left'>
+              <div class='all_box magD30'>
+                <p class='type_data_title'>Lucy Redder</p>
+                <a href='MyQRLink04.html' class='link_icon icon-createmode_editedit'></a>
+              </div>
 
               <div class='all_box'>
-                <p class='type_data_title'>Admin</p>
-
-                <div class='input_box input_box_top15 borderGray'>
-                  <div class='social_box member_box icon-user---anticoncopy-3'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <a href='on_NetWorkPage04_1.html' class='btn_status_box c_gray member icon-Address-Card---FontAwesomeCopy-3'></a>
+                <!-- social data -->
+                <!-- 01.email-->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-email'></div>
+                  <input class='inEnter addEnter in_all' type="text" value="abcdef568328@gmail.com">
                 </div>
-              </div>
+
+                <!-- 02.Instagram -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-instagram'></div>
+                  <input class='inEnter addEnter in_all' type="text" value="LucyRedde">
+                </div>
+
+                <!-- 03.Snapchat -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-snapchat'></div>
+                  <input class='inEnter addEnter in_all' type="text" value="lucyredde23">
+                </div>
+
+                <!-- 04.Facebook -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-facebook'></div>
+                  <input class='inEnter addEnter in_all' type="text" value="lr123">
+                </div>
+
+                <!-- 05.Phone -->
+                <div class='input_box borderGray'>
+                  <div class='social_box icon-phone'></div>
+                  <input class='inEnter addEnter in_all' type="text" value="0912345678">
+                </div>
+              </div>  
             </div>
           </div>
         </main>
@@ -113,7 +131,6 @@
       <a href='on_CreatQRLink01.html' class='lastMenu type_uppercase'>Create QR Link</a>
       <a href='NetWorkList01.html' class='lastMenu type_uppercase'>My Networks</a>
       <a href='CreateNetwork01.html' class='lastMenu type_uppercase'>Create Network</a>
-      <a href='SavePage01.html' class='lastMenu type_uppercase'>saved contacts</a>
       <a href='MyQRLink01.html' class='lastMenu type_uppercase'>My QR Links</a>
       <a href='account.html' class='lastMenu type_uppercase'>My Account</a>
 
@@ -121,7 +138,6 @@
         <a href="index.html" class='link_brightBlue no_mark type_uppercase '>log out</a>
       </div>
     </div>
-
   </body>
 </html>
 
