--- a/SavePage01_1.html
+++ b/SavePage01_1.html
@@ -26,94 +26,81 @@
         <header>
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
           <nav>
-            <a href="NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
-            <a href="CreatQRLink01.html" class='web_menu web_a'>CREATE QR LINK</a>
-            <a class='web_menu menu_gray'>MENU</a>
-            <a href="login.html" class='link_login order_right'>LOG IN</a>
+            <a href="on_NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
+            <a href="on_CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
+            <a class='web_menu'>MENU</a>
+            <a href="index.html" class='link_login order_right'>LOG OUT</a>
           </nav>
 
           <div class='m_Hamburg icon-menu'></div>
         </header>
 
         <main>
-          <!-- 手機才會顯示 -->
-          <div class='cent_boxs cent_mobile'>
-            <div class='cent_box'>
-              <a href="login.html" class='m_title_type type_uppercase'>log in</a>
-              <a href="CreatQRLink01.html" class='m_top_type order_right'>Create QR Link</a>
+          <div class='cent_boxs cent_web'>
+            <div class='cent_box cent_box50'>
+              <a href="account.html" class='m_title_type type_uppercase'>Lucy Redder</a>
+              <a href="on_CreatQRLink01.html" class='m_top_type order_right w_not_show'>Create QR Link</a>
+            </div>
+
+            <i class='m_border_all2'></i><!-- 手機版・虛線 -->
+
+            <div class='cent_box cent_box50'>
+              <a href="MyQRLink01.html" class='m_top_type order_right m_order_no'>QR Links You Created</a>
             </div>
           </div>
-          <!-- 手機才會顯示・end -->
 
-         <div class='cent_boxs'>
-            <div class='cent_box'>
-              
-              <input class='toEnter borderBlue' type="text" value="Lucy Redder">
-              
-              <p class='bright_type13 padTB15'>Enter the info you want to share:</p>
+          <div class='cent_boxs'>
+            <!-- search -->
+            <div class='cent_serch_box'>
+              <div class='all_box w_not_show'>
+                <p class='type_data_title order_left'>Saved Contacts Pages</p>
+              </div>
+            </div>
+
+            <i class='m_border'></i><!-- 手機版・虛線 -->
+
+            <div class='cent_box borderGray_left'>
+              <div class='all_box magD30'>
+                <p class='type_data_title'>Jim John</p>
+              </div>
 
               <div class='all_box'>
+                <!-- social data -->
                 <!-- 01.email-->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-email'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                  <input class='inEnter' type="text" value="jbteref568328@gmail.com">
+                  <a class='btn_status_box c_gray member icon-chain'></a>
                 </div>
 
                 <!-- 02.Instagram -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-instagram'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                  <input class='inEnter' type="text" value="JimJohn">
+                  <a class='btn_status_box c_gray member icon-chain'></a>
                 </div>
 
                 <!-- 03.Snapchat -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-snapchat'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                  <input class='inEnter' type="text" value="jimjohn">
+                  <a class='btn_status_box c_gray member icon-chain'></a>
                 </div>
 
                 <!-- 04.Facebook -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-facebook'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                  <input class='inEnter' type="text" value="JJ">
+                  <a class='btn_status_box c_gray member icon-chain'></a>
                 </div>
 
                 <!-- 05.Phone -->
                 <div class='input_box borderBlue'>
                   <div class='social_box icon-phone'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_green icon-ion-checkmark-circled---IoniconsCopy-6'></button>
+                  <input class='inEnter' type="text" value="0945678921">
+                  <a class='btn_status_box c_gray member icon-chain'></a>
                 </div>
-
-                <!-- 06.Linkedin -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-linkedin'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
-                </div>
-
-                <!-- 07.Twitter -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-twitter'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
-                </div>
-
-                <!-- 08.YouTube -->
-                <div class='input_box borderBlue'>
-                  <div class='social_box icon-youtube'></div>
-                  <input class='inEnter' type="text" value="Lucy Redder">
-                  <button class='btn_status_box c_gray icon-ion-checkmark-circled---IoniconsCopy-6'></button>
-                </div>
-              </div>
-
-              <div class='all_box btn_cent m_cent'>
-                <button class='btn_add icon-plus' onclick="openModal();currentSlide(1)"></button>
-                <a href="CreatQRLink03.html" class='link_brightBlue order_right m_order_no m_magTop45 type_uppercase'>create QR Link</a>
-              </div>
+              </div>  
             </div>
           </div>
         </main>
@@ -164,20 +151,16 @@
         <a class='icon-x'></a>
       </div>
 
-      <a href='NetWorkPage01.html' class='lastMenu type_uppercase'>Join Network</a>
-      <a href='CreatQRLink01.html' class='lastMenu type_uppercase'>Create QR Link</a>
-      <a class='lastMenu type_uppercase no_acc'>My Networks</a>
-      <a class='lastMenu type_uppercase no_acc'>Create Network</a>
-      <a class='lastMenu type_uppercase no_acc'>saved contacts</a>
-      <a class='lastMenu type_uppercase no_acc'>My QR Links</a>
-      <a class='lastMenu type_uppercase no_acc'>My Account</a>
+      <a href='on_NetWorkPage01.html' class='lastMenu type_uppercase'>Join Network</a>
+      <a href='on_CreatQRLink01.html' class='lastMenu type_uppercase'>Create QR Link</a>
+      <a href='NetWorkList01.html' class='lastMenu type_uppercase'>My Networks</a>
+      <a href='CreateNetwork01.html' class='lastMenu type_uppercase'>Create Network</a>
+      <a href='SavePage01.html' class='lastMenu type_uppercase'>saved contacts</a>
+      <a href='MyQRLink01.html' class='lastMenu type_uppercase'>My QR Links</a>
+      <a href='account.html' class='lastMenu type_uppercase'>My Account</a>
 
-      <div class='all_box m_magTD20 m_padSID20'>
-        <a href="login.html" class='link_brightBlue no_mark type_uppercase '>log in</a>
-      </div>
-
-      <div class='all_box'>
-        <p class='team_type'>or <a href="signup.html" class='link_CreatAcc'>create an account</a></p>
+      <div class='all_box m_magTD30 m_padSID20'>
+        <a href="index.html" class='link_brightBlue no_mark type_uppercase '>log out</a>
       </div>
     </div>
 
