--- a/on_NetWorkPage06.html
+++ b/on_NetWorkPage06.html
@@ -164,6 +164,7 @@
       <a href='on_CreatQRLink01.html' class='lastMenu type_uppercase'>Create QR Link</a>
       <a href='NetWorkList01.html' class='lastMenu type_uppercase'>My Networks</a>
       <a href='CreateNetwork01.html' class='lastMenu type_uppercase'>Create Network</a>
+      <a href='SavePage01.html' class='lastMenu type_uppercase'>saved contacts</a>
       <a href='MyQRLink01.html' class='lastMenu type_uppercase'>My QR Links</a>
       <a href='account.html' class='lastMenu type_uppercase'>My Account</a>
 
