--- a/NetWorkPage01.html
+++ b/NetWorkPage01.html
@@ -26,11 +26,13 @@
         <header>
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
           <nav>
-            <a href="NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
-            <a href="CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
-            <a class='web_menu menu_gray'>MENU</a>
-            <a href="login.html" class='link_login order_right'>LOG IN</a>
-          </nav>
+            <div class='nav_boxs'>
+              <a href="NetWorkPage01.html">JOIN an NETWORK</a>
+              <a href="CreatQRLink01.html">CREATE QR LINK</a> 
+              <span class='web_no'>MENU</span> 
+              <a href="login.html" class='link_login2 order_right'>LOG IN</a> 
+            </div>
+          </nav> 
 
           <div class='m_Hamburg icon-menu'></div>
         </header>
