--- a/SavePage02.html
+++ b/SavePage02.html
@@ -25,12 +25,29 @@
       <div class='page_box'>
         <header>
           <a href="index.html" class='link_home'><img src="img/W_logo.png"></a>
-          <nav>
+          <!-- <nav>
             <a href="on_NetWorkPage01.html" class='web_menu'>JOIN an NETWORK</a>
             <a href="on_CreatQRLink01.html" class='web_menu'>CREATE QR LINK</a>
             <a class='web_menu'>MENU</a>
             <a href="index.html" class='link_login order_right'>LOG OUT</a>
-          </nav>
+          </nav> -->
+          <nav>
+            <div class='nav_boxs'>
+              <a href="on_NetWorkPage01.html">JOIN an NETWORK</a>
+              <a href="on_CreatQRLink01.html">CREATE QR LINK</a> 
+              <span>
+                MENU
+                <div>
+                  <a href='NetWorkList01.html' class='type_uppercase'>My Networks</a>
+                  <a href='CreateNetwork01.html' class='type_uppercase'>Create Network</a>
+                  <a href='SavePage01.html' class='type_uppercase'>saved contacts</a>
+                  <a href='MyQRLink01.html' class='type_uppercase'>My QR Links</a>
+                  <a href='account.html' class='type_uppercase'>My Account</a>
+                </div>
+              </span> 
+              <a href="index.html" class='link_login2 order_right'>LOG OUT</a> 
+            </div>
+          </nav>           
 
           <div class='m_Hamburg icon-menu'></div>
         </header>
