--- a/test.html
+++ b/test.html
@@ -1,65 +1,45 @@
 <!DOCTYPE html>
-<html>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: Verdana, sans-serif;
-  margin: 0;
-}
+<html lang="zh-Hant">
+  <head>
+    <meta http-equiv="Content-Language" content="zh-tw">
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
 
-* {
-  box-sizing: border-box;
-}
+    <title>Select N Share</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
-/* The Modal (background) */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 149, 217, 1.00);
-}
+    <link rel="stylesheet" type="text/css" href="css/icon.css">
+    <link rel="stylesheet" type="text/css" href="css/public.css">
+    <link rel="stylesheet" type="text/css" href="css/block.css">
+    <link rel="stylesheet" type="text/css" href="css/type.css">
+    <link rel="stylesheet" type="text/css" href="css/link.css">
 
-/* The Close Button */
-.close {
-  color: white;
-  position: absolute;
-  top: 10px;
-  right: 25px;
-  font-size: 35px;
-  font-weight: bold;
-}
+    <script language="javascript" type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
+    <script language="javascript" type="text/javascript" src="js/public.js"></script>
+  </head>
 
-
-</style>
-
-<body>
-  <p onclick="openModal();currentSlide(1)">click me</p>
-
-  <div id="myModal" class="modal">
-    <span class="close cursor" onclick="closeModal()">&times;</span>
-  </div>
-
-<script>
-function openModal() {
-  document.getElementById("myModal").style.display = "block";
-}
-
-function closeModal() {
-  document.getElementById("myModal").style.display = "none";
-}
-
-// var slideIndex = 1;
-// showSlides(slideIndex);
-
-
-</script>
-    
+<body style='background-color: rgba(197, 27, 41, 1.00);'>
+  <div class='page_boxs'>
+      <div class='page_box'>
+        <header>
+           <nav>
+             <div class='nav_boxs'>
+              <a href="index.html" class='link_login2 order_right'>LOG OUT</a> 
+              <span>
+                MENU
+                <div>
+                  <a href="#">asdfsa1</a>
+                  <a href="#">asdfsa12</a>
+                  <a href="#">asdfsa13</a>
+                </div>
+              </span> 
+              <a href="#">CREATE QR LINK</a> 
+              <a href="#">JOIN an NETWORK</a> 
+            </div>
+          </nav> 
+        </header>
+      </div>
+    </div>
 </body>
 </html>
