修改登入頁＋首頁

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           </div>
 
           <div class='ir_boxs magTop45'>
-            <a href="NetWorkPage01.html" class='link_blueLine have_mark magRight20'>JOIN NEW NETWORK</a>
-            <a href="CreatQRLink01.html" class='link_brightBlue have_mark m_magTop15'>CREATE CUSTOM QR LINK</a>
+            <a href="NetWorkPage01.html" class='link_blueLine have_mark magRight10'>JOIN NEW NETWORK</a>
+            <a href="CreatQRLink01.html" class='link_brightBlue have_mark m_magTop15 in_btn_r'>CREATE CUSTOM QR LINK</a>
           </div>
         </div>
       </div>
